[package]
name = "tcpp03-m20"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bitfield = "0.19.4"
defmt = { version = "1.1.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[features]
default = []

defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03"]